logout from current device complete

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,11 @@
         <p class="text-zinc-600 text-3xl">Hello, <%= user.fullName %>!</p>
         <p class="text-zinc-600 text-xl">Email: <%= user.email %></p>
         <p class="text-zinc-600 text-xl">Mobile: <%= user.mobileNo %></p>
+        <button type="button" id="logoutButton">Logout</button>
     <% } else { %>
         <p class="text-zinc-600 text-xl">User data is not available.</p>
+        
     <% } %>
 </body>
+<script src="/js/index.js"></script>
 </html>
