--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,15 +7,30 @@
     <title>H&W Management</title>
     <link rel="stylesheet" href="/css/output.css" />
     <link rel="stylesheet" href="/css/common.css" />
-    <!-- <link href="/css/tailwind.min.css" rel="stylesheet"> -->
+    <link href="/css/tailwind.min.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="relative m-auto max-w-[1240px] min-w-screen min-h-screen common-padding">
         <% if (user) { %>
             <div class="flex flex-col gap-5">
-                <p class="text-gray text-2xl"><span class="capitalize" id="greeting"></span>, <%=user.fullName %>!</p>
+                <p class="text-gray text-3xl"><span class="capitalize" id="greeting"></span>, <%=user.fullName %>!</p>
                 <p class="text-dark text-5xl font-semibold">Welcome to Health & Wellness Management</p>
+                <div class="flex flex-col gap-5">
+                    <h2 class="text-3xl font-semibold">Medicatons for One Time Only</h2>
+                    <div id="OneTimeOnlyMedicationGrid" class="grid grid-cols-2 gap-10">
+                    </div>
+                </div>
+                <div class="flex flex-col gap-10">
+                    <h2 class="text-3xl font-semibold">Medicatons for Recuring Daily</h2>
+                    <div id="RecuringDailyMedicationGrid" class="grid grid-cols-2 gap-10">
+                    </div>
+                </div>
+                <div class="flex flex-col gap-5">
+                    <h2 class="text-3xl font-semibold">Medicatons for Recuring Weekly</h2>
+                    <div id="RecuringWeeklyMedicationGrid" class="grid grid-cols-2 gap-10">
+                    </div>
+                </div>
 
                 <div id="modal-name" data-modal-target class="hidden">
                     <div class="flex items-center justify-center fixed inset-0 z-50">
@@ -24,8 +39,8 @@
                             class="opacity-0 fixed inset-0 w-full z-40 transition-opacity duration-300 bg-black select-none">
                         </div>
                         <form data-modal-wrapper data-class-in="opacity-100 translate-y-0"
-                            data-class-out="opacity-0 translate-y-5"
-                           id="medicationForm" class="opacity-0 translate-y-5 z-50 overflow-auto max-w-lg min-h-[40rem] max-h-screen scrolling-touch transition-all duration-300 bg-white flex flex-col transform shadow-xl m-5 w-full p-10 rounded-xl">
+                            data-class-out="opacity-0 translate-y-5" id="medicationForm"
+                            class="opacity-0 translate-y-5 z-50 overflow-auto max-w-lg min-h-[40rem] max-h-screen scrolling-touch transition-all duration-300 bg-white flex flex-col transform shadow-xl m-5 w-full p-10 rounded-xl">
                             <div class="flex flex-col gap-2">
                                 <div class="flex w-full justify-between items-center">
                                     <img src="/images/svgs/black-arrow.svg" alt="arrow"
@@ -97,7 +112,7 @@
                             </div>
                             <div id="form-2" class="hidden py-5 flex flex-col gap-5">
                                 <div id="oneTimeOnly" class="flex flex-col gap-4 w-full">
-                                    <h3 class="font-semibold text-dark text-2xl">
+                                    <h3 class="font-semibold text-dark text-3xl">
                                         One Time Only
                                     </h3>
                                     <div class="flex flex-col gap-2 items-start w-full p-1">
@@ -107,8 +122,8 @@
                                     </div>
                                 </div>
                                 <div id="recuringDaily" class="flex flex-col gap-4 w-full">
-                                    <h3 class="font-semibold text-dark text-2xl">
-                                       Recuring Daily
+                                    <h3 class="font-semibold text-dark text-3xl">
+                                        Recuring Daily
                                     </h3>
                                     <div class="flex flex-col gap-2 items-start w-full p-1">
                                         <label for="recuringDailytime">Time:</label>
@@ -127,12 +142,13 @@
                                     </div>
                                 </div>
                                 <div id="recuringWeekly" class="flex flex-col gap-4 w-full">
-                                    <h3 class="font-semibold text-dark text-2xl">
+                                    <h3 class="font-semibold text-dark text-3xl">
                                         Recuring Weekly
                                     </h3>
                                     <div class="flex flex-col gap-2 items-start w-full p-1">
                                         <label for="recuringWeeklySchedules">Schedule</label>
-                                        <select name="recuringWeeklySchedules" id="recuringWeeklySchedules" class="p-2 rounded-lg w-full">
+                                        <select name="recuringWeeklySchedules" id="recuringWeeklySchedules"
+                                            class="p-2 rounded-lg w-full">
                                             <option value="0">Sunday</option>
                                             <option value="1">Monday</option>
                                             <option value="2">Tuesday</option>
@@ -172,7 +188,7 @@
                 </div>
                 <button data-modal-trigger aria-controls="modal-name" aria-expanded="false" type="button">
                     <img src="images/svgs/Vector.svg"
-                        class="cursor-pointer absolute bottom-10 right-0 p-5 rounded-full bg-blue"
+                        class="cursor-pointer fixed bottom-10 right-20 p-5 rounded-full bg-blue"
                         alt="add medications"></button>
             </div>
             <% } else { %>
@@ -184,5 +200,6 @@
 <script src="/js/index.js"></script>
 <script src="/sweetalert2.all.min.js"></script>
 <script src="/js/model.js"></script>
+<script src="/js/medicationList.js"></script>
 
 </html>
