--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,21 @@
     <div class="relative m-auto max-w-[1240px] min-w-screen min-h-screen common-padding">
         <% if (user) { %>
             <div class="flex flex-col gap-5">
-                <p class="text-gray text-3xl"><span class="capitalize" id="greeting"></span>, <%=user.fullName %>!</p>
+                <div class="flex w-full justify-between">
+                    <p class="text-gray text-3xl"><span class="capitalize" id="greeting"></span>, <%=user.fullName %>!
+                    </p>
+                    <div class="flex items-center gap-5 justify-center">
+                        <button type="button" id="logoutButton"
+                            class="rounded-lg bg-zinc-800 text-zinc-50 px-10 py-2 w-fit">Logout</button>
+                        <button type="button" id="logoutFromAllDeviceButton"
+                            class="rounded-lg bg-zinc-800 text-zinc-50 px-10 py-2 w-fit">Logout from All Device</button>
+                        <button type="button" id="logoutFromAllRemainingDeviceButton"
+                            class="text-sm rounded-lg bg-zinc-800 text-zinc-50 px-10 py-2 w-fit">Logout from All Remaining
+                            Device</button>
+                    </div>
+
+                </div>
+
                 <p class="text-dark text-5xl font-semibold">Welcome to Health & Wellness Management</p>
                 <div class="flex flex-col gap-5">
                     <h2 class="text-3xl font-semibold">Medicatons for One Time Only</h2>
@@ -178,10 +192,10 @@
                             </div>
                             <div class="flex justify-end items-center">
                                 <button type="button" id="nextButton"
-                                    class="rounded-lg bg-zinc-800 text-zinc-50 px-20 py-2 w-fit flex items-center justify-end">Next
+                                    class="rounded-lg bg-zinc-800 text-zinc-50 px-10 py-2 w-fit flex items-center justify-end">Next
                                     <img src="/images/svgs/arrow.svg" alt="arrow" class="rotate-180" /></button>
                                 <button type="button" id="submitFormButton"
-                                    class="hidden rounded-lg bg-zinc-800 text-zinc-50 px-20 py-2 w-fit flex items-center justify-end">Submit</button>
+                                    class="hidden rounded-lg bg-zinc-800 text-zinc-50 px-10 py-2 w-fit flex items-center justify-end">Submit</button>
                             </div>
                         </form>
                     </div>
