some modification in ui design

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,19 +29,19 @@
 
                 </div>
 
-                <p class="text-dark text-5xl font-semibold">Welcome to Health & Wellness Management</p>
+                <p class="text-dark text-[3.685rem] font-bold my-5">Welcome to Health & Wellness Management</p>
                 <div class="flex flex-col gap-5">
-                    <h2 class="text-3xl font-semibold">Medicatons for One Time Only</h2>
+                    <h2 class="text-4xl font-semibold text-blue">Medicatons for One Time Only</h2>
                     <div id="OneTimeOnlyMedicationGrid" class="grid grid-cols-2 gap-10">
                     </div>
                 </div>
                 <div class="flex flex-col gap-10">
-                    <h2 class="text-3xl font-semibold">Medicatons for Recuring Daily</h2>
+                    <h2 class="text-4xl font-semibold text-blue">Medicatons for Recuring Daily</h2>
                     <div id="RecuringDailyMedicationGrid" class="grid grid-cols-2 gap-10">
                     </div>
                 </div>
                 <div class="flex flex-col gap-5">
-                    <h2 class="text-3xl font-semibold">Medicatons for Recuring Weekly</h2>
+                    <h2 class="text-4xl font-semibold text-blue">Medicatons for Recuring Weekly</h2>
                     <div id="RecuringWeeklyMedicationGrid" class="grid grid-cols-2 gap-10">
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                                     </button>
                                 </div>
                                 <span class="text-gray"><span id="count"></span> is <span id="totalCount"></span></span>
-                                <h3 class="font-semibold text-dark text-3xl">
+                                <h3 class="font-semibold text-dark text-5xl">
                                     Add Medications
                                 </h3>
                             </div>
@@ -126,7 +126,7 @@
                             </div>
                             <div id="form-2" class="hidden py-5 flex flex-col gap-5">
                                 <div id="oneTimeOnly" class="flex flex-col gap-4 w-full">
-                                    <h3 class="font-semibold text-dark text-3xl">
+                                    <h3 class="font-semibold text-dark text-5xl">
                                         One Time Only
                                     </h3>
                                     <div class="flex flex-col gap-2 items-start w-full p-1">
@@ -136,7 +136,7 @@
                                     </div>
                                 </div>
                                 <div id="recuringDaily" class="flex flex-col gap-4 w-full">
-                                    <h3 class="font-semibold text-dark text-3xl">
+                                    <h3 class="font-semibold text-dark text-5xl">
                                         Recuring Daily
                                     </h3>
                                     <div class="flex flex-col gap-2 items-start w-full p-1">
@@ -156,7 +156,7 @@
                                     </div>
                                 </div>
                                 <div id="recuringWeekly" class="flex flex-col gap-4 w-full">
-                                    <h3 class="font-semibold text-dark text-3xl">
+                                    <h3 class="font-semibold text-dark text-5xl">
                                         Recuring Weekly
                                     </h3>
                                     <div class="flex flex-col gap-2 items-start w-full p-1">
