socket io integration completed as well as project

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -211,6 +211,7 @@
                 <% } %>
 </body>
 </div>
+<script src="/socket.io/socket.io.js"></script>
 <script src="/js/index.js"></script>
 <script src="/sweetalert2.all.min.js"></script>
 <script src="/js/model.js"></script>
