--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -67,7 +67,8 @@
                             <input type="text" id="password" name="password"
                                 class="border border-zinc-500 outline-none w-full rounded-lg py-1">
                         </div>
-                        <button id="authButton" type="button" class="rounded-lg bg-zinc-800 text-zinc-50 px-20 py-2 w-fit">
+                        <button id="authButton" type="button"
+                            class="rounded-lg bg-zinc-800 text-zinc-50 px-20 py-2 w-fit">
                             <%= type.charAt(0).toUpperCase() + type.slice(1) %>
                         </button>
             </form>
@@ -78,6 +79,9 @@
     </section>
 
 </body>
+<!-- for socket io go to index.js file -->
+<script src="/socket.io/socket.io.js"></script>
 <script src="/js/auth.js"></script>
 <script src="/sweetalert2.all.min.js"></script>
+
 </html>
